[package]
name = "comm_reg_server"
version = "0.1.0"
authors = ["Liu Xiaoyi <xiaoyi-l17@mails.tsinghua.edu.cn>"]

[dependencies]
clippy = { version = "*", optional = true }
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"
lazy_static = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
serde_yaml = "*"
ctrlc = "*"
leveldb = "*"
ws = "*"
uuid = { version = "*", features = ["v4"] }
ring = "*"
byteorder = "*"

[features]
default = ['clippy']
